# specialized

./: README.md  db.sqlite3  pyproject.toml
backend/: settings.py  urls.py
backend/blog/: admin.py  apps.py  models.py  views.py
backend/blog/migrations/: 0001_initial.py
backend/frontend/templates/: base.html
backend/frontend/templates/business/storefront/blog/: create.html  delete.html  detail.html  list.html
backend/frontend/urls/: __init__.py  storefront.py
backend/frontend/views/: blog.py
