[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["yosmarlobo <94659644+yosmarlobo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
